--- a/SocialStocks2/index.html
+++ b/SocialStocks2/index.html
@@ -12,5 +12,15 @@
 
   <body>
     Navigate to Angular Stocks <a href="Stocks/StocksAngular"> here... </a>
+
+      <br />
+  <!--   
+       <a class="twitter-timeline"
+         href="https://twitter.com/search?q=%24UNG"
+         data-widget-id="842752062362439680">Tweets about $UNG</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      -->
+
+
   </body>
 </html>
